manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: giropops-senhas
  name: giropops-deployment
  namespace: giropops-senhas
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1 # TODO - Revisar o número de pods que podem ser criados a mais
      maxUnavailable: 1 # TODO - Revisar o número de pods que podem ficar indisponíveis
  selector:
    matchLabels:
      app: giropops-senhas
  template:
    metadata:
      labels:
        app: giropops-senhas
    spec:
      containers:
      - image: raphaelborges/linuxtips-giropops-senhas:1.3
        name: giropops-senhas
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: '0.3'
            memory: 128Mi
          requests:
            cpu: '0.1'
            memory: 128Mi
        imagePullPolicy: Always
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1
